<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent">
        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1"/>
        <TextView
                android:text="@string/value"
                android:gravity="end|center_vertical" android:paddingRight="16dp"
                android:background="#dddddd"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="2"
                android:id="@+id/valueTextView" android:textSize="36sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="3">
            <Button
                    android:text="@string/_7"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num7Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_8"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num8Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_9"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num9Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/clear"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="clearClicked"
                    android:layout_height="match_parent" android:id="@+id/clearButton" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="3">
            <Button
                    android:text="@string/_4"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num4Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_5"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num5Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_6"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num6Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/sign"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/signButton" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="3">
            <Button
                    android:text="@string/_1"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num1Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_2"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num2Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/_3"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num3Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/plus"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="plusClicked"
                    android:layout_height="match_parent" android:id="@+id/plusButton" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="3">
            <Button
                    android:text="@string/dot"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/dotButton" android:layout_weight="1"/>
            <Button
                    android:text="@string/_0"
                    android:textSize="30sp" android:textColor="#555555"
                    android:layout_width="wrap_content" android:onClick="buttonClicked"
                    android:layout_height="match_parent" android:id="@+id/num0Button" android:layout_weight="1"/>
            <Button
                    android:text="@string/equals"
                    android:textSize="30sp" android:backgroundTint="#357aea" android:textColor="#eeeeee"
                    android:layout_width="wrap_content" android:onClick="equalsClicked"
                    android:layout_height="match_parent" android:id="@+id/calculateButton" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>